ga and ya metrika

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,6 @@
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
+  <meta name="google-site-verification" content="11p66_UM03GRxdmvTd90BBQn7G2eVFDmtyaFtQ5O540" />
+  <meta name="yandex-verification" content="b515e98375753ead" />
 </head>
