--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,28 @@ layout: default
       {%- for post in site.posts -%}
       <li>
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
+        <span class="post-meta">
+          {{ post.date | date: date_format }}
+          {% capture time %}{{ post.content | reading_time }}{% endcapture %}
+              {% if time == '1' %}
+                a minute
+              {% else %}
+                {% case time %}
+                  {% when '2' %}
+                    two
+                  {% when '3' %}
+                    three
+                  {% when '4' %}
+                    four
+                  {% when '5' %}
+                    five
+                  {% else %}
+                    {{ time }}
+                {% endcase %}
+                minutes
+              {% endif %}
+              to read
+        </span>
         <h3>
           <a class="post-link" href="{{ post.url | relative_url }}">
             {{ post.title | escape }}
