--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,8 @@
     {%- include google-analytics.html -%}
   {%- endif -%}
 
+  <link rel="amphtml" href="{{ site.url }}{{ page.url | replace_first:'.html','.amp.html' }}" />
+  
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
