--- a/_layouts/tag-index.html
+++ b/_layouts/tag-index.html
@@ -1,13 +1,11 @@
 ---
 layout: default
 description: |
-  Tagged articles in the blog of Yegor Bugayenko, about
-  software development, object-oriented programming,
-  project management, and startup investments
+  Тегированные записи с Yet another blog от Alex Vakhitov
 ---
 
 <header itemprop="name">
-  <h1>{{ page.posts.size }} posts about {{ page.title }}</h1>
+  <h1>{{ page.posts.size }} записей о {{ page.title }}</h1>
 </header>
 <ul class="post-list">
   {% for post in page.posts %}
