--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -265,3 +265,12 @@
     }
   }
 }
+.pagination {
+  text-align: center;
+  .left {
+    float: left;
+    }
+    .right {
+      float: right;
+      }
+  }
