--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -274,3 +274,13 @@
       float: right;
       }
   }
+.form-subscribe {
+  text-align: right;
+  font-size: 14px;
+  input, button { 
+    border:solid 1px #A9A9A9;
+    border-radius:4px;
+    padding: 5px;
+    background: #fff;
+ }
+}
