--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,12 @@
     {%- include google-analytics.html -%}
   {%- endif -%}
 
-  <link rel="amphtml" href="{{ site.url }}{{ page.url | replace_first:'.html','.amp.html' }}" />
   
+  {% if page.path contains '_posts' %}
+    {% unless page.skip_amp %}
+      <link rel="amphtml" href="{{ site.url }}{{ page.url | replace_first:'.html','.amp.html' }}" />
+    {% endunless %}
+  {% endif %}
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
