--- a/_layouts/amp.html
+++ b/_layouts/amp.html
@@ -25,7 +25,7 @@
         "dateModified": "{{ page.date }}",
         "author": {
           "@type": "Person",
-          "name": "Yegor Bugayenko"
+          "name": "Alex Vakhitov"
         },
         "publisher": {
           "@type": "Organization",
@@ -58,11 +58,11 @@
   </head>
   <body>
     <article>
-      <p class="intro">
+      <p class="intro" style="text-align: center">
         This is a mobile version, full one is
         <a href="{{ doc.url | prepend: site.baseurl | prepend: site.url }}">here</a>.
       </p>
-      <p>
+      <p style="text-align: center">
         <amp-img src="/images/face-256x256.jpg" width="80" height="80"
           alt="{{ site.author.name }}" class="photo"></amp-img>
       </p>
