--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,9 @@ layout: default
       {%- if page.author -%}
         <li><span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span></li>
       {%- endif -%}
+      {%- if page.place -%}
+        <li><span>{{ page.place }}</span></li>
+      {%- endif -%}
       <li>{{ page.content | count_words }} слов</li>
       <li>
       {% capture time %}{{ page.content | reading_time }}{% endcapture %}
@@ -44,6 +47,15 @@ layout: default
 
   <div class="post-content e-content" itemprop="articleBody">
     {{ content }}
+  </div>
+  <hr>
+  <div class="post-navigation">
+    {% if page.previous.url %}
+      <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+    {% endif %}
+    {% if page.next.url %}
+      <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+    {% endif %}
   </div>
 
   {%- if site.disqus.shortname -%}
