--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -208,7 +208,7 @@
     margin-bottom: 0;
     li {
       display: inline;
-      margin-right: .5 * $em;
+      margin-right: 15px;
       white-space: nowrap;
     }
 }
@@ -283,4 +283,20 @@
     padding: 5px;
     background: #fff;
  }
+}
+
+.post-navigation {
+  font-size: 14px;
+  display: block;
+  width: auto;
+  overflow: hidden;
+  a {
+    display: block;
+    width: 50%;
+    float: left;
+    margin: 1em 0;
+  }
+  .next {
+    text-align: right;
+  }
 }
